add service list
