# app/api/service/service.go
@@ -1,0 +1,54 @@
+package service
+
+import (
+	"github.com/gogf/gf/net/ghttp"
+	"github/pibigstar/go-gateway/app/model"
+	"github/pibigstar/go-gateway/app/request"
+	"github/pibigstar/go-gateway/app/response"
+)
+
+// List godoc
+// @Summary 服务列表接口
+// @Description 服务列表接口
+// @Tags 服务列表接口
+// @ID /service/list
+// @Accept  json
+// @Produce  json
+// @Param content query string false "模糊查询"
+// @Param page query int false "页数"
+// @Param size query int false "每页多少个"
+// @Success 200 {object} response.Response{data=response.Response} "success"
+// @Router /service/list [get]
+func List(r *ghttp.Request) {
+	var req *request.ServiceInfoListReq
+	if err := r.Parse(&req); err != nil {
+		response.Error(r, err)
+	}
+	if req.Page == nil {
+		req.Page = &request.Paginate{
+			Page: 1,
+			Size: 20,
+		}
+	}
+
+	infos, total, err := model.MServiceInfoModel.PageList(req)
+	if err != nil {
+		response.Error(r, err)
+	}
+	var list []*response.ServiceInfo
+	for _, info := range infos {
+		list = append(list, &response.ServiceInfo{
+			Id:          info.Id,
+			LoadType:    info.LoadType,
+			ServiceName: info.ServiceName,
+			ServiceDesc: info.ServiceDesc,
+			UpdateAt:    info.UpdateAt,
+			CreateAt:    info.CreateAt,
+		})
+	}
+	resp := &response.ServiceInfoListResp{
+		Total: total,
+		List:  list,
+	}
+	response.Success(r, resp)
+}
