# router/router.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gogf/gf/frame/g"
 	"github.com/gogf/gf/net/ghttp"
 	"github/pibigstar/go-gateway/app/api/admin"
+	"github/pibigstar/go-gateway/app/api/service"
 	"github/pibigstar/go-gateway/middleware"
 )
 
@@ -19,5 +20,10 @@ func init() {
 		group.GET("/info", admin.Info)
 		group.GET("/logout", admin.Logout)
 		group.POST("/changePwd", admin.ChangePwd)
+	})
+
+	s.Group("/service", func(group *ghttp.RouterGroup) {
+		group.Hook("/*", ghttp.HOOK_BEFORE_SERVE, middleware.Auth())
+		group.GET("/list", service.List)
 	})
 }
